--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -62,10 +62,9 @@
     font-size: 60px;
 }
 
-.landing-page-iam.english {
-    font-size: 90px;
+.landing-page-iam.englisch {
+    font-size: 100px;
 }
-
 
 .landing-page-name-container {
     display: flex;
