--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -74,7 +74,7 @@
                             </svg>
                         </div>
                         <span>
-                            {{ 'ive-read' | translate }} <a href="#">{{ 'privacy-policy' | translate }}</a> {{
+                            {{ 'ive-read' | translate }} <a [routerLink]="currentLang === 'de' ? '/datenschutzerklaerung' : '/privacy-policy'" target="_blank">{{ 'privacy-policy' | translate }}</a> {{
                             'and-agree' | translate }}
                         </span>
 
