--- a/src/app/landing-page/landing-page.responsive.scss
+++ b/src/app/landing-page/landing-page.responsive.scss
@@ -3,8 +3,8 @@
         font-size: 50px;
     }
 
-    .landing-page-iam.english {
-        font-size: 72px;
+    .landing-page-iam.englisch {
+        font-size: 84px;
     }
 
     .landing-page-slogan {
@@ -23,8 +23,8 @@
         font-size: 42px;
     }
 
-    .landing-page-iam.english {
-        font-size: 60px;
+    .landing-page-iam.englisch {
+        font-size: 68px;
     }
 
     .landing-page-slogan {
@@ -51,8 +51,8 @@
         font-size: 35px;
     }
 
-    .landing-page-iam.english {
-        font-size: 48px;
+    .landing-page-iam.englisch {
+        font-size: 56px;
     }
 
     .landing-page-slogan {
