--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -74,7 +74,9 @@
                             </svg>
                         </div>
                         <span>
-                            {{ 'ive-read' | translate }} <a [routerLink]="currentLang === 'de' ? '/datenschutzerklaerung' : '/privacy-policy'" target="_blank">{{ 'privacy-policy' | translate }}</a> {{
+                            {{ 'ive-read' | translate }} <a
+                                [routerLink]="currentLang === 'de' ? '/datenschutzerklaerung' : '/privacy-policy'"
+                                target="_blank">{{ 'privacy-policy' | translate }}</a> {{
                             'and-agree' | translate }}
                         </span>
 
@@ -82,6 +84,13 @@
                             class="checkbox-message">
                             {{ 'checkbox-message' | translate }}
                         </span>
+                    </div>
+
+                    <div *ngIf="successMessage" class="alert alert-success">
+                        {{ successMessage }}
+                    </div>
+                    <div *ngIf="errorMessage" class="alert alert-danger">
+                        {{ errorMessage }}
                     </div>
 
                     <input type="submit" value="{{ 'send-message' | translate }} &#058;&#041;"
