--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -1,5 +1,5 @@
 #contact {
-    margin-top: 200px;
+    margin: 200px 0 100px 0;
     min-height: calc(100dvh - 110px);
     scroll-margin-top: 110px;
 }
@@ -81,7 +81,7 @@
     form {
         display: flex;
         flex-direction: column;
-        align-items: flex-end;
+        align-items: center;
         gap: 20px;
 
         .form-name,
@@ -95,7 +95,7 @@
                 position: absolute;
                 font-size: 14px;
                 color: #FF0000;
-                top: 18px;
+                top: 22px;
                 right: 12px;
             }
         }
@@ -117,6 +117,7 @@ textarea {
     margin-bottom: 16px;
     resize: vertical;
     font-family: 'Poppins', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 16px;
 
     &:focus {
         outline: none;
@@ -350,4 +351,24 @@ input[type=submit]:disabled {
     top: -200px;
     right: 0;
     z-index: -1;
+}
+
+.alert {
+    width: calc(100% - 30px);
+    padding: 15px;
+    margin: 15px 0;
+    border: 1px solid transparent;
+    border-radius: 4px;
+}
+
+.alert-success {
+    color: #3c763d;
+    background-color: #dff0d8;
+    border-color: #d6e9c6;
+}
+
+.alert-danger {
+    color: #a94442;
+    background-color: #f2dede;
+    border-color: #ebccd1;
 }
