--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -365,7 +365,7 @@ input[type=submit]:disabled {
 }
 
 .alert-success {
-    color: #70E61C;
+    color: #3c763d;
     background-color: #dff0d8;
     border-color: #d6e9c6;
 }
