--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -14,9 +14,9 @@
     <div class="landing-page-bottom">
         <div class="landing-page-btns">
             <div class="green-line"></div>
-            <a href="https://github.com/Alexander-Riedel"><img src="assets/img/github.svg" alt=""></a>
+            <a href="https://github.com/Alexander-Riedel" target="_blank"><img src="assets/img/github.svg" alt=""></a>
             <a href="#contact"><img src="assets/img/email.svg" alt=""></a>
-            <a href="https://www.linkedin.com/in/-alexanderriedel-/"><img src="assets/img/linkedin.svg" alt=""></a>
+            <a href="https://www.linkedin.com/in/-alexanderriedel-" target="_blank"><img src="assets/img/linkedin.svg" alt=""></a>
         </div>
         <div class="landing-page-scrolldown"><a href="#about-me">{{ 'scroll-down' | translate }} &#10132;</a></div>
     </div>
