--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -1,6 +1,7 @@
 #portfolio {
     margin-top: 120px;
-    min-height: calc(100dvh - 110px);
+    margin-bottom: 200px;
+    //min-height: calc(100dvh - 110px);
     scroll-margin-top: 110px;
 }
 
