add aos, bugfixes

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,7 +1,7 @@
 <section id="about-me">
     <div class="about-me">
         <div class="about-me-container">
-            <div class="about-me-text">
+            <div class="about-me-text" data-aos="fade-right">
                 <div class="about-me-text-top">
                     <h2>{{ 'about-me' | translate }}</h2>
                     <span>{{ 'hey-there' | translate }}</span>
@@ -22,13 +22,13 @@
                     </div>
                 </div>
             </div>
-            <div class="about-me-picture">
+            <div class="about-me-picture" data-aos="fade-left">
                 <img src="" alt="">
                 <div class="about-me-shadows">
                     <img src="assets/img/green-purple-shadow-1.svg" alt="">
                 </div>
             </div>
         </div>
-        <img class="about-me-background" src="assets/img/about-me/background.svg" alt="" />
     </div>
+    <img class="about-me-background" src="assets/img/about-me/background.svg" alt="" />
 </section>
