--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -8,66 +8,66 @@
             <a href="#contact"><button>{{ 'get-in-touch' | translate }}</button></a>
         </div>
         <div class="skills-img-container">
-            <div class="skill">
+            <div class="skill" data-aos="flip-left">
                 <img src="assets/img/skills/html.svg" alt="">
                 <span>HTML</span>
             </div>
-            <div class="skill">
+            <div class="skill" data-aos="flip-left">
                 <img src="assets/img/skills/css.svg" alt="">
                 <span>CSS</span>
             </div>
-            <div class="skill">
+            <div class="skill" data-aos="flip-left">
                 <img src="assets/img/skills/javascript.svg" alt="">
                 <span>JavaScript</span>
             </div>
-            <div class="skill">
+            <div class="skill" data-aos="flip-left">
                 <img src="assets/img/skills/typescript.svg" alt="">
                 <span>TypeScript</span>
             </div>
-            <div class="skill">
+            <div class="skill" data-aos="flip-left">
                 <img src="assets/img/skills/angular.svg" alt="">
                 <span>Angular</span>
             </div>
-            <div class="skill">
+            <div class="skill" data-aos="flip-left">
                 <img src="assets/img/skills/firebase.svg" alt="">
                 <span>Firebase</span>
             </div>
-            <div class="skill">
+            <div class="skill" data-aos="flip-left">
                 <img src="assets/img/skills/materialdesign.svg" alt="">
                 <span>Material Design</span>
             </div>
-            <div class="skill">
+            <div class="skill" data-aos="flip-left">
                 <img src="assets/img/skills/wordpress.svg" alt="">
                 <span>WordPress</span>
             </div>
-            <div class="skill">
+            <div class="skill" data-aos="flip-left">
                 <img src="assets/img/skills/discord-mark-white.svg" alt="">
                 <span>Discord</span>
             </div>
-            <div class="skill">
+            <div class="skill" data-aos="flip-left">
                 <img src="assets/img/skills/git.svg" alt="">
                 <span>GIT</span>
             </div>
-            <div class="skill">
+            <div class="skill" data-aos="flip-left">
                 <img src="assets/img/skills/api.svg" alt="">
                 <span>REST-Api</span>
             </div>
-            <div class="skill">
+            <div class="skill" data-aos="flip-left">
                 <img src="assets/img/skills/scrum.svg" alt="">
                 <span>Scrum</span>
             </div>
         </div>
         <div class="skills-text-container">
-            <div class="skills-headline">
+            <div class="skills-headline" data-aos="fade-left">
                 <h2>{{ 'skills' | translate }}</h2>
                 <div class="skills-headline-line"></div>
             </div>
-            <div class="skills-text">{{ 'my-journey' | translate }}</div>
-            <div class="looking-for">
+            <div class="skills-text" data-aos="fade-left">{{ 'my-journey' | translate }}</div>
+            <div class="looking-for" data-aos="fade-up">
                 <h3>{{ 'looking-for' | translate }} {{ 'another-skill' | translate }}?</h3>
                 <div class="skills-text">{{ 'feel-free-to-contact' | translate }}</div>
             </div>
-            <a href="#contact"><button>{{ 'get-in-touch' | translate }}</button></a>
+            <a href="#contact" data-aos="fade-up"><button>{{ 'get-in-touch' | translate }}</button></a>
         </div>
     </div>
 </section>
