--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -2,10 +2,13 @@
     margin: 200px 0 100px 0;
     min-height: calc(100dvh - 110px);
     scroll-margin-top: 110px;
+    position: relative;
 }
 
 .contact-container {
     position: relative;
+    z-index: 100;
+    overflow: hidden;
 }
 
 .contact-headline {
@@ -355,7 +358,7 @@ textarea.ng-invalid.ng-touched {
     position: absolute;
     top: -200px;
     right: 0;
-    z-index: -1;
+    z-index: 1;
 }
 
 .alert {
@@ -384,4 +387,11 @@ textarea.ng-invalid.ng-touched {
     color: #E61C40;
     background-color: #f2dede;
     border-color: #ebccd1;
+}
+
+.top {
+    position: absolute;
+    bottom: 0;
+    right: 150px;
+    z-index: 100;
 }
