--- a/src/app/contact/contact.responsive.css
+++ b/src/app/contact/contact.responsive.css
@@ -27,6 +27,10 @@
         margin: 0 0 0 64px;
         gap: 24px;
     }
+
+    .top {
+        right: 64px;
+    }
 }
 
 @media screen and (max-width:1200px) {
@@ -46,6 +50,10 @@
 
     .contact-left-text {
         margin: 0 0 0 40px;
+    }
+
+    .top {
+        right: 40px;
     }
 }
 
@@ -99,6 +107,10 @@
             transform: none;
             border: 0;
         }
+    }
+
+    .top {
+        right: 32px;
     }
 }
 
@@ -171,5 +183,9 @@
         form {
             gap: 8px;
         }
+    }
+
+    .top {
+        right: 16px;
     }
 }
