--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,15 +1,15 @@
 <footer>
     <div class="footer-container">
-        <div class="footer-left">
-            <div class="footer-name"><a href="#">ALE<span>X</span>ANDER</a></div>
+        <div class="footer-left" data-aos="fade-right">
+            <div class="footer-name"><a href="">ALE<span>X</span>ANDER</a></div>
             <div class="legal-notice">
                 <a [routerLink]="currentLang === 'de' ? '/impressum' : '/legal-notice'">
                     {{ 'legal-notice.title' | translate }}
                 </a>
             </div>
         </div>
-        <div class="footer-middle">&#169; Alexander Riedel 2024</div>
-        <div class="footer-right">
+        <div class="footer-middle" data-aos="fade-up">&#169; Alexander Riedel 2024</div>
+        <div class="footer-right" data-aos="fade-left">
             <a href="https://github.com/Alexander-Riedel" target="_blank"><img src="assets/img/github.svg" alt=""></a>
             <a href="#contact"><img src="assets/img/email.svg" alt=""></a>
             <a href="https://www.linkedin.com/in/-alexanderriedel-" target="_blank"><img src="assets/img/linkedin.svg" alt=""></a>
