--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,6 +1,8 @@
 footer {
     border-top: 4px solid #70E61C;
     background-color: #141D2F;
+    position: relative;
+    z-index: 100;
 }
 
 .footer-container {
