--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -1,12 +1,13 @@
 #portfolio {
     margin-top: 120px;
     margin-bottom: 200px;
-    //min-height: calc(100dvh - 110px);
     scroll-margin-top: 110px;
+    position: relative;
 }
 
 .portfolio-container {
     position: relative;
+    z-index: 100;
 }
 
 .portfolio-headline {
@@ -223,12 +224,12 @@
     position: absolute;
     top: -200px;
     right: 0;
-    z-index: -1;
+    z-index: 1;
 }
 
 .portfolio-left-shadow {
     position: absolute;
     bottom: -250px;
     left: 0;
-    z-index: -1;
+    z-index: 1;
 }
