--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
 <app-header></app-header>
-<router-outlet></router-outlet>
+<div class="page-wrapper">
+    <div class="content-container">
+        <router-outlet></router-outlet>
+    </div>
+</div>
 <app-footer></app-footer>
