--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,19 +1,25 @@
 <header>
-    <div class="name"><a href="">ALE<span>X</span>ANDER</a></div>
-    <div class="burger-menu" (click)="toggleMenu()">
-        <span></span>
-        <span></span>
-        <span></span>
+    <div class="header-wrapper">
+        <div class="header-container">
+            <div class="name"><a href="">ALE<span>X</span>ANDER</a></div>
+            <div class="burger-menu" (click)="toggleMenu()">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <nav [class.active]="menuOpen">
+                <a href="#about-me" [class.active]="activeSection === 'about-me'"
+                    (click)="setActiveSection('about-me')">
+                    {{ 'about-me' | translate }}
+                </a>
+                <a href="#skills" [class.active]="activeSection === 'skills'" (click)="setActiveSection('skills')">
+                    {{ 'skills' | translate }}
+                </a>
+                <a href="#portfolio" [class.active]="activeSection === 'portfolio'"
+                    (click)="setActiveSection('portfolio')">
+                    {{ 'portfolio' | translate }}
+                </a>
+            </nav>
+        </div>
     </div>
-    <nav [class.active]="menuOpen">
-        <a href="#about-me" [class.active]="activeSection === 'about-me'" (click)="setActiveSection('about-me')">
-            {{ 'about-me' | translate }}
-        </a>
-        <a href="#skills" [class.active]="activeSection === 'skills'" (click)="setActiveSection('skills')">
-            {{ 'skills' | translate }}
-        </a>
-        <a href="#portfolio" [class.active]="activeSection === 'portfolio'" (click)="setActiveSection('portfolio')">
-            {{ 'portfolio' | translate }}
-        </a>
-    </nav>
 </header>
