update landing-page style

--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,5 +1,7 @@
 <section id="home">
     <div class="landing-page-container">
+
+
         <div class="landing-page-headline-container">
             <div class="landing-page-iam" [ngClass]="getLanguageClass()" data-aos="fade-right">
                 {{ 'i-am' | translate }}
@@ -9,21 +11,36 @@
                 <span class="landing-page-slogan" data-aos="fade-left">{{ 'frontend-developer' | translate }}</span>
             </div>
         </div>
+
+
         <a href="#contact"><button>{{ 'lets-talk' | translate }}</button></a>
+
+
         <div class="landing-page-bottom">
+
             <div class="landing-page-btns" data-aos="fade-up">
                 <div class="green-line"></div>
-                <a href="https://github.com/Alexander-Riedel" target="_blank"><img src="assets/img/github.svg"
-                        alt=""></a>
-                <a href="#contact"><img src="assets/img/email.svg" alt=""></a>
-                <a href="https://www.linkedin.com/in/-alexanderriedel-" target="_blank"><img
-                        src="assets/img/linkedin.svg" alt=""></a>
+                <a href="https://github.com/Alexander-Riedel" target="_blank">
+                    <img src="assets/img/github.svg" alt="">
+                </a>
+                <a href="#contact">
+                    <img src="assets/img/email.svg" alt="">
+                </a>
+                <a href="https://www.linkedin.com/in/-alexanderriedel-" target="_blank">
+                    <img src="assets/img/linkedin.svg" alt="">
+                </a>
             </div>
+
             <div class="landing-page-scrolldown" data-aos="fade-up">
                 <a href="#about-me">{{ 'scroll-down' | translate }} &#10132;</a>
             </div>
+
         </div>
+
+
         <img class="landing-page-purple-shadow" src="assets/img/purple-shadow-1.svg" alt="" />
         <img class="landing-page-blue-shadow" src="assets/img/blue-shadow-1.svg" alt="" />
+
+
     </div>
 </section>
