--- a/src/styles.scss
+++ b/src/styles.scss
@@ -51,6 +51,7 @@ body {
     color: #FFFFFF;
     background-color: #141D2F;
     font-family: 'Poppins', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    overflow-x: hidden;
 }
 
 h1,
