--- a/src/app/header/header.responsive.scss
+++ b/src/app/header/header.responsive.scss
@@ -3,13 +3,13 @@
 }
 
 @media screen and (max-width:1400px) {
-    header {
+    .header-container {
         padding: 0 64px;
     }
 }
 
 @media screen and (max-width:1200px) {
-    header {
+    .header-container {
         padding: 0 40px;
 
         .burger-menu {
@@ -60,7 +60,7 @@
 }
 
 @media screen and (max-width:992px) {
-    header {
+    .header-container {
         height: 80px;
         padding: 0 32px;
 
@@ -79,7 +79,7 @@
 @media screen and (max-width:768px) {}
 
 @media screen and (max-width:576px) {
-    header {
+    .header-container {
         nav {
             gap: 60px;
             font-size: 24px;
@@ -94,7 +94,7 @@
 }
 
 @media screen and (max-width:468px) {
-    header {
+    .header-container {
         height: 60px;
         padding: 0 16px;
     }
