--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -1,12 +1,21 @@
 #about-me {
-    margin-top: 120px;
-    min-height: calc(100dvh - 110px);
-    scroll-margin-top: 110px;
+    margin: 200px 0;
+    scroll-margin-top: 200px;
+    width: 100%;
     position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.about-me {
+.about-me-container {
+    width: 100%;
+    max-width: 1920px;
     position: relative;
+    padding: 0 150px;
+    display: flex;
+    align-items: center;
+    gap: 128px;
     z-index: 100;
 }
 
@@ -17,14 +26,6 @@
     left: 0;
     right: 0;
     z-index: 1;
-}
-
-.about-me-container {
-    padding: 0 150px;
-    display: flex;
-    align-items: center;
-    gap: 128px;
-    z-index: 100;
 }
 
 .about-me-text {
