--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,11 +1,19 @@
 footer {
+    width: 100%;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border-top: 4px solid #70E61C;
     background-color: #141D2F;
-    position: relative;
     z-index: 100;
 }
 
 .footer-container {
+    width: 100%;
+    max-width: 1920px;
+    position: relative;
+
     margin: 0 150px;
     height: 291px;
     display: flex;
