--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -1,9 +1,14 @@
 #home {
+    width: 100%;
     scroll-margin-top: 110px;
+    display: flex;
+    justify-content: center;
 }
 
 .landing-page-container {
     position: relative;
+    width: 100%;
+    max-width: 1920px;
     height: calc(100dvh - 110px);
     display: flex;
     flex-direction: column;
@@ -39,7 +44,7 @@
 
 .landing-page-purple-shadow {
     position: absolute;
-    left: -200px;
+    left: 0;
     top: 50%;
     transform: translateY(-50%);
     z-index: 1;
@@ -47,7 +52,7 @@
 
 .landing-page-blue-shadow {
     position: absolute;
-    right: -200px;
+    right: 0;
     top: 50%;
     transform: translateY(-50%);
     z-index: 1;
