--- a/src/app/skills/skills.component.scss
+++ b/src/app/skills/skills.component.scss
@@ -1,13 +1,16 @@
 #skills {
-    margin-top: 120px;
-    min-height: calc(100dvh - 110px);
-    scroll-margin-top: 110px;
+    margin: 200px 0;
+    scroll-margin-top: 200px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .skills-container {
+    width: 100%;
+    max-width: 1920px;
     display: flex;
-    scroll-margin-top: 110px;
-    min-height: calc(100vh - 110px);
     position: relative;
     z-index: 100;
     overflow: hidden;
@@ -46,7 +49,7 @@
 }
 
 .skills-text-container {
-    min-height: calc(100vh - 110px);
+    //min-height: calc(100vh - 110px);
     margin-left: 50px;
     width: 40%;
     display: flex;
