--- a/src/styles.scss
+++ b/src/styles.scss
@@ -54,6 +54,24 @@ body {
     overflow-x: hidden;
 }
 
+::-webkit-scrollbar {
+    width: 6px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #9747FF;
+    border-radius: 2px;
+
+    &:hover {
+        background-color: #1CDAE6DD;
+    }
+}
+
+::-webkit-scrollbar-track {
+    background-color: #141D2A;
+    margin: 4px 0;
+}
+
 h1,
 h2,
 h3 {
