add translation buttons

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
+<app-header [setLanguage]="setLanguage.bind(this)"></app-header>
 <div class="page-wrapper">
     <div class="content-container">
         <router-outlet></router-outlet>
