--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -2,7 +2,7 @@
     <div class="landing-page-container">
 
         <div class="landing-page-headline-container">
-            <div class="landing-page-iam" [ngClass]="getLanguageClass()" data-aos="fade-right">
+            <div class="landing-page-iam" [ngClass]="getLanguageClass()" data-aos="fade-left">
                 {{ 'i-am' | translate }}
             </div>
             <div class="landing-page-name-container">
