--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -1,6 +1,6 @@
 #about-me {
     margin: 200px 0;
-    scroll-margin-top: 200px;
+    scroll-margin-top: 150px;
     width: 100%;
     position: relative;
     display: flex;
@@ -12,28 +12,32 @@
     width: 100%;
     max-width: 1920px;
     position: relative;
-    padding: 0 150px;
     display: flex;
     align-items: center;
     gap: 128px;
-    z-index: 100;
 }
 
-.about-me-background {
-    width: 100%;
+.about-me-background-container {
     position: absolute;
-    top: 30vh;
+    top: 0;
     left: 0;
     right: 0;
-    z-index: 1;
+    z-index: 2;
+
+    img {
+        width: 100%;
+        height: 76%;
+    }
 }
 
 .about-me-text {
+    padding-left: 150px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     width: 50%;
     gap: 36px;
+    z-index: 100;
 }
 
 .about-me-text-top {
@@ -65,6 +69,7 @@
 }
 
 .about-me-picture {
+    padding-right: 150px;
     width: 50%;
 }
 
