--- a/src/app/about-me/about-me.responsive.scss
+++ b/src/app/about-me/about-me.responsive.scss
@@ -1,11 +1,15 @@
 @media screen and (max-width:1400px) {
     .about-me-container {
-        padding: 0 64px;
         gap: 64px;
     }
 
     .about-me-text {
         gap: 24px;
+        padding-left: 64px;
+    }
+
+    .about-me-picture {
+        padding-right: 64px;
     }
 
     .about-me-text-top {
@@ -15,8 +19,15 @@
 
 @media screen and (max-width:1200px) {
     .about-me-container {
-        padding: 0 40px;
         gap: 40px;
+    }
+
+    .about-me-text {
+        padding-left: 40px;
+    }
+
+    .about-me-picture {
+        padding-right: 40px;
     }
 }
 
@@ -28,14 +39,18 @@
     }
 
     .about-me-container {
-        padding: 0 32px;
         flex-direction: column-reverse;
         gap: 128px;
     }
 
     .about-me-text {
+        padding: 0 32px;
         width: unset;
         gap: 48px;
+    }
+
+    .about-me-picture {
+        padding: 0 32px;
     }
 
     .about-me-text-top {
@@ -53,8 +68,15 @@
 
 @media screen and (max-width:468px) {
     .about-me-container {
-        padding: 0 16px;
         gap: 64px;
+    }
+
+    .about-me-text {
+        padding: 0 16px;
+    }
+
+    .about-me-picture {
+        padding: 0 16px;
     }
 
     .about-me-highlight {
