--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -6,9 +6,9 @@
 }
 
 .landing-page-container {
-    position: relative;
     width: 100%;
     max-width: 1920px;
+    position: relative;
     height: calc(100dvh - 110px);
     display: flex;
     flex-direction: column;
@@ -66,7 +66,7 @@
 
 .landing-page-iam {
     writing-mode: vertical-lr;
-    //transform: rotate(180deg);
+    rotate: 180deg;
     text-shadow: #141D2F 0px 0px 24px;
 }
 
