--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -13,7 +13,7 @@
     max-width: 1920px;
     position: relative;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     gap: 128px;
 }
 
@@ -22,7 +22,7 @@
     top: 0;
     left: 0;
     right: 0;
-    z-index: 2;
+    z-index: 1;
 
     img {
         width: 100%;
