--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -6,14 +6,14 @@ footer {
     align-items: center;
     border-top: 4px solid #70E61C;
     background-color: #141D2F;
-    z-index: 100;
+    z-index: 100;    
+    overflow: hidden;
 }
 
 .footer-container {
     width: 100%;
     max-width: 1920px;
     position: relative;
-
     margin: 0 150px;
     height: 291px;
     display: flex;
