--- a/src/app/privacy-policy/privacy-policy.component.scss
+++ b/src/app/privacy-policy/privacy-policy.component.scss
@@ -1,5 +1,20 @@
+#privacy-policy {
+    margin: 0 0 100px 0;
+    width: 100%;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .privacy-policy-container {
     margin: 64px 200px;
+    width: 100%;
+    max-width: 1920px;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 
     h1 {
         font-size: 2rem;
