add navigate home function

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -102,7 +102,7 @@
 
     </div>
     
-    <a href="#home"><img class="top" src="assets/img/top.svg" alt="Top"></a>
+    <a (click)="navigateToHome()"><img class="top" src="assets/img/top.svg" alt="Top"></a>
 
     <div class="contact-right-shadow">
         <img src="assets/img/purple-shadow-2.svg" alt="">
