--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -36,6 +36,7 @@ footer {
         letter-spacing: 10px;
         color: #FFFFFF;
         text-decoration: none;
+        cursor: pointer;
 
         span {
             color: #9747FF;
