--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <header>
     <div class="header-wrapper">
         <div class="header-container">
-            <div class="name"><a href="">ALE<span>X</span>ANDER</a></div>
+            <div class="name"><a (click)="navigateToHome()">ALE<span>X</span>ANDER</a></div>
             <div class="burger-menu" (click)="toggleMenu()">
                 <span></span>
                 <span></span>
