--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -74,6 +74,7 @@ header {
         letter-spacing: 10px;
         color: #FFFFFF;
         text-decoration: none;
+        cursor: pointer;
 
         span {
             color: #9747FF;
