update about-me style

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -22,7 +22,7 @@
             </div>
         </div>
         <div class="about-me-picture" data-aos="fade-left">
-            <img src="" alt="">
+            <img src="assets/img/about-me/me.webp" alt="">
             <div class="about-me-shadows">
                 <img src="assets/img/green-purple-shadow-1.svg" alt="">
             </div>
