--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -17,19 +17,6 @@
     gap: 128px;
 }
 
-.about-me-background-container {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 1;
-
-    img {
-        width: 100%;
-        height: 76%;
-    }
-}
-
 .about-me-text {
     padding-left: 150px;
     display: flex;
@@ -71,14 +58,35 @@
 .about-me-picture {
     padding-right: 150px;
     width: 50%;
+    position: relative;
+    display: flex;
+    justify-content: center;
+
+    img {
+        height: 750px;
+    }
 }
 
 .about-me-shadows {
     display: flex;
+    position: absolute;
+    top: 0;
 
     img {
         width: 100%;
-        object-fit: cover;
         z-index: -2;
+    }
+}
+
+.about-me-background-container {
+    position: absolute;
+    top: -250px;
+    left: 0;
+    right: 0;
+    z-index: 1;
+
+    img {
+        width: 100%;
+        height: 76%;
     }
 }
