--- a/src/app/about-me/about-me.responsive.scss
+++ b/src/app/about-me/about-me.responsive.scss
@@ -1,3 +1,27 @@
+@media screen and (max-width:3440px) {
+    .about-me-background-container {
+        top: -100px;
+    }
+}
+
+@media screen and (max-width:2960px) {
+    .about-me-background-container {
+        top: 0;
+    }
+}
+
+@media screen and (max-width:2560px) {
+    .about-me-background-container {
+        top: 100px;
+    }
+}
+
+@media screen and (max-width:1920px) {
+    .about-me-background-container {
+        top: 200px;
+    }
+}
+
 @media screen and (max-width:1400px) {
     .about-me-container {
         gap: 64px;
@@ -10,10 +34,18 @@
 
     .about-me-picture {
         padding-right: 64px;
+
+        img {
+            height: 600px;
+        }
     }
 
     .about-me-text-top {
         gap: 24px;
+    }
+
+    .about-me-background-container {
+        top: 250px;
     }
 }
 
@@ -28,6 +60,10 @@
 
     .about-me-picture {
         padding-right: 40px;
+
+        img {
+            height: 550px;
+        }
     }
 }
 
@@ -51,6 +87,7 @@
 
     .about-me-picture {
         padding: 0 32px;
+        width: 100%;
     }
 
     .about-me-text-top {
@@ -62,9 +99,31 @@
     }
 }
 
-@media screen and (max-width:768px) {}
+@media screen and (max-width:768px) {
+    .about-me-picture {
 
-@media screen and (max-width:576px) {}
+        img {
+            height: 450px;
+        }
+    }
+
+    .about-me-background-container {
+        top: 200px;
+    }
+}
+
+@media screen and (max-width:576px) {
+    .about-me-picture {
+
+        img {
+            height: 450px;
+        }
+    }
+
+    .about-me-background-container {
+        top: 250px;
+    }
+}
 
 @media screen and (max-width:468px) {
     .about-me-container {
@@ -77,6 +136,14 @@
 
     .about-me-picture {
         padding: 0 16px;
+
+        img {
+            height: 350px;
+        }
+    }
+
+    .about-me-background-container {
+        top: 200px;
     }
 
     .about-me-highlight {
@@ -84,12 +151,12 @@
         flex-direction: column;
         align-items: center;
         gap: 16px;
-    
+
         img {
             height: 50px;
             width: 50px;
             transition: all 0.3s ease;
-    
+
             &:hover {
                 transform: scale(1.2);
             }
